--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -22,6 +22,14 @@
   scrollbar-width: none; /* Firefox */
 }
 
+.flexSpaceEven {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+}
+
 .containerStyle::-webkit-scrollbar {
   display: none;
 }
