--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -20,6 +20,7 @@
   overflow-y: scroll;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  width: 55%;
 }
 
 .flexSpaceEven {
