styling and using current time as default

--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -26,6 +26,7 @@
 .flexSpaceEven {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   padding: 5px;
