--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -23,6 +23,21 @@
   width: 55%;
 }
 
+.containerStyleVertical{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: white;
+  padding: 30px;
+  border-radius: 20px;
+  max-height: 45vh;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+  width: 55%;
+}
+
 .flexSpaceEven {
   width: 100%;
   display: flex;
@@ -30,6 +45,14 @@
   align-items: center;
   padding: 5px;
 }
+
+/* .flexSpaceEvenVertical{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 5px;
+} */
 
 .inputContainer {
   display: flex;
