--- a/client/src/styles/generalStyles.css
+++ b/client/src/styles/generalStyles.css
@@ -94,13 +94,21 @@
   flex: 1;
 }
 
+.buttonRowAlignRight{
+  display: flex;
+  justify-content: end;
+  margin-top: 20px;
+  align-items: stretch;
+  flex: 1;
+}
+
 @media only screen and (max-width: 450px) {
   .containerStyle {
     width: calc(100vw);
     overflow-x: auto;
   }
   .inputContainer {
-    width: calc(100vw - 20px);
+    /* width: calc(100vw - 20px); */
     margin-bottom: 5px;
     padding: 5px;
   }
@@ -114,7 +122,7 @@
     width: calc(100vw - 20px);
   }
   .inputContainer {
-    width: calc(100vw - 10px);
+    /* width: calc(100vw - 10px); */
     margin-bottom: 5px;
     padding: 5px;
   }
@@ -125,7 +133,7 @@
     width: 75%;
   }
   .inputContainer {
-    width: 80%;
+    /* width: 80%; */
     margin-bottom: 10px;
     padding: 10px;
   }
